--- a/popup.html
+++ b/popup.html
@@ -24,6 +24,9 @@
           <button type="submit">Copy</button>
         </li>
         <li>
+          <span id="errors"></span>
+        </li>
+        <li>
           <span id="results"></span>
         </li>
       </ul>
