--- a/popup.html
+++ b/popup.html
@@ -7,21 +7,21 @@
     <form id="settingsForm">
       <ul>
         <li>
-          <label>Domain to copy from</label>
+          <label>Domain to sync from</label>
           <input id="domain" name="domain" type="text" />
         </li>
         <li>
-          <label>Cookies to copy (separated by new lines)</label>
+          <label>Cookies to sync (separated by new lines)</label>
           <textarea
-            id="cookiesToCopy"
-            name="cookiesToCopy"
+            id="cookiesToSync"
+            name="cookiesToSync"
             rows="5"
             cols="33"
           >
           </textarea>
         </li>
         <li>
-          <button type="submit">Copy</button>
+          <button type="submit">Sync</button>
         </li>
         <li>
           <span id="errors"></span>
